# helios-platform

./: .env.template  .gitignore  .gitmodules  .mcp.json  00-KICKOFF-START-HERE.md  AGENTS.md  AGENT_EXECUTION_DASHBOARD.md  AGENT_FLEET_EXECUTION_REPORT.md  AGENT_FLEET_STATUS.md  AI_INFRASTRUCTURE_COMPLETE.md  AI_INFRASTRUCTURE_DELIVERY_REPORT.md  AI_INFRASTRUCTURE_MANIFEST.md  AI_INFRASTRUCTURE_QUICK_REFERENCE.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  AUTOMATION_COMPLETENESS_REPORT.md  BOARD_AUTOMATION_IMPLEMENTATION.md  BOARD_AUTOMATION_INDEX.md  BOARD_SETUP_COMPLETION_SUMMARY.md  BOARD_SETUP_QUICK_REFERENCE.md  BUILD_DETAILS.md  BUILD_VARIANTS.md  BUILD_VARIANTS_RAZER_BLADE.md  CHANGELOG.md  CLAUDE.md  CODESPACES_READINESS.md  CODESPACE_SETUP_GUIDE.md  COMMAND_CENTER.md  COMPLETE_COMPREHENSIVE_EVERYTHING.md  COMPLETE_DELIVERY_SUMMARY.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_DOCUMENTATION_INDEX_AND_MASTER_GUIDE.md  COMPLETE_FILE_INDEX.md  COMPLETE_FLEET_ORCHESTRATION_STRATEGY.md  COMPLETE_INTEGRATED_SYSTEM_ARCHITECTURE.md  COMPLETE_INTEGRATION_GUIDE.md  COMPLETE_MASTER_INDEX.md  COMPLETE_MASTER_NAVIGATION_INDEX.md  COMPLETE_OVERVIEW.md  COMPLETE_PHASE1_ALL_FEATURES_FINAL.md  (+211 more)
.claude/: settings.json
reference/helios-enterprise-automation-fabric/project/: .dockerignore  .gitignore  README.md  RUN_THIS_FIRST.md  pyproject.toml
reference/helios-enterprise-automation-fabric/project/.github/workflows/: azure-deploy.yml  broker-images.yml  config-drift.yml  emergency-quarantine.yml  nightly-health.yml  pr-linear-sync.yml  sharepoint-governance-sync.yml  workflow-outcome-router.yml
reference/helios-enterprise-automation-fabric/project/config/fabric/: approval-policy.json  connector-registry.json  deployment-approval.json  event-envelope.schema.json  evidence-mapping.json  status-policy.json
reference/helios-enterprise-automation-fabric/project/config/linear/: issue-templates.json
reference/helios-enterprise-automation-fabric/project/config/sharepoint/: lists-and-libraries.json  retention-labels.example.json
reference/helios-enterprise-automation-fabric/project/config/slack/: app-manifest.yaml  channel-bindings.example.json  channels.json
reference/helios-enterprise-automation-fabric/project/config/teams/: workflow-contracts(1).json
reference/helios-enterprise-automation-fabric/project/docker/: broker.Dockerfile  worker.Dockerfile
reference/helios-enterprise-automation-fabric/project/infra/bicep/: servicebus.bicep  storage.bicep
reference/helios-enterprise-automation-fabric/project/infra/bicep/modules/: foundation.bicep  private-endpoint.bicep
reference/helios-enterprise-automation-fabric/project/infra/bicep/parameters/: dev.bicepparam  prod.bicepparam  stage.bicepparam
reference/helios-enterprise-automation-fabric/project/power-platform/connector/: apiDefinition.swagger.json  apiProperties.json
reference/helios-enterprise-automation-fabric/project/scripts/bootstrap/: Initialize-HeliosAzureOidc.ps1  Initialize-HeliosPowerPlatform.ps1  Install-HeliosFabricOverlay.ps1  Register-HeliosTeamsWorkflow.ps1
reference/helios-enterprise-automation-fabric/project/scripts/github/: build_event.py  canonicalize_plan.py  control_plane_dispatch.py  publish_event.py
reference/helios-enterprise-automation-fabric/project/scripts/governance/: pin_actions.py  sharepoint_sync.py
reference/helios-enterprise-automation-fabric/project/scripts/validation/: Validate-PowerShell.ps1  assert_no_secret_values.py  validate_bicep.sh
reference/helios-enterprise-automation-fabric/project/src/dotnet/HELIOS.Fabric.Broker/: BrokerServices.cs  HELIOS.Fabric.Broker.csproj  WebhookEndpoints.cs
reference/helios-enterprise-automation-fabric/project/src/dotnet/HELIOS.Fabric.Contracts/: FabricContracts.cs  HELIOS.Fabric.Contracts.csproj
reference/helios-enterprise-automation-fabric/project/src/dotnet/HELIOS.Fabric.Tests/: FabricTests.cs  HELIOS.Fabric.Tests.csproj
reference/helios-enterprise-automation-fabric/project/src/helios_fabric/: __init__.py  __main__.py  cli.py
reference/helios-enterprise-automation-fabric/project/src/helios_fabric_cli/: __init__.py  cli.py
reference/helios-enterprise-automation-fabric/project/tests/: test_fabricctl.py
reference/helios-enterprise-automation-fabric/project/tests/fixtures/: deployment-plan.json
services/helios-deployment-agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/helios-deployment-agent/docs/: prompt.md
services/helios-deployment-agent/evals/: cases.jsonl  run_local.py
services/helios-deployment-agent/helios_deployment_agent/: __init__.py  agent.py  main.py  policy.py
services/helios-deployment-agent/tests/: test_http_boundary.py  test_policy.py
src/native/HELIOS.Native.Performance/: CMakeLists.txt  README.md
src/native/HELIOS.Native.Performance/benchmarks/: native_benchmark.cpp
src/native/HELIOS.Native.Performance/include/: helios_native_performance.h
src/native/HELIOS.Native.Performance/include/helios/: aihub_native_engine.hpp  merge_analysis.hpp  monadoblade_profile_optimizer.hpp
src/native/HELIOS.Native.Performance/src/: helios_native_performance.cpp  merge_analysis.cpp
src/native/HELIOS.Performance/: CMakeLists.txt
src/native/HELIOS.Performance/include/: helios_performance.h
src/native/HELIOS.Performance/src/: helios_performance.cpp
src/native/HELIOS.Performance/tests/: helios_performance_tests.cpp
src/native/HELIOS.Performance/x-tier/: CMakeLists.txt  main.cpp  phase_runtime.cpp  phase_runtime.hpp  secure_runtime_core.cpp  secure_runtime_core.hpp
(+1312 files in other folders)
