[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-enterprise-fabric"
version = "2.0.0"
description = "Plan-first validation, simulation, and evidence tooling for the HELIOS automation fabric."
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]

[project.scripts]
fabricctl = "helios_fabric_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

