cmake_minimum_required(VERSION 3.22)
project(HELIOSNativePerformance LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)

add_library(HELIOSNativePerformance src/helios_native_performance.cpp)
target_compile_definitions(HELIOSNativePerformance PRIVATE HELIOS_NATIVE_PERFORMANCE_EXPORTS)
target_include_directories(HELIOSNativePerformance PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(HELIOSNativePerformanceBenchmark benchmarks/native_benchmark.cpp)
target_link_libraries(HELIOSNativePerformanceBenchmark PRIVATE HELIOSNativePerformance)
