cmake_minimum_required(VERSION 3.24)
project(HELIOSPerformance LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(helios_performance src/helios_performance.cpp)
target_include_directories(helios_performance PUBLIC include)
enable_testing()
add_executable(helios_performance_tests tests/helios_performance_tests.cpp)
target_link_libraries(helios_performance_tests PRIVATE helios_performance)
add_test(NAME helios_performance_tests COMMAND helios_performance_tests)
